# controllers/formulario_por_tipo.go
@@ -4,6 +4,7 @@ import (
 	"github.com/astaxie/beego"
 	"github.com/udistrital/sga_evaluacion_docente_mid/services"
 	"github.com/udistrital/utils_oas/errorhandler"
+	"github.com/udistrital/utils_oas/requestresponse"
 )
 
 // Formulario_por_tipoController operations for Formulario_por_tipo
@@ -14,6 +15,7 @@ type Formulario_por_tipoController struct {
 // URLMapping ...
 func (c *Formulario_por_tipoController) URLMapping() {
 	c.Mapping("GetAll", c.GetFormularioTipo)
+	c.Mapping("GetAll", c.PostFormularioTipo)
 }
 
 // GetFormularioTipo ...
@@ -41,4 +43,29 @@ func (c *Formulario_por_tipoController) GetFormularioTipo() {
 	c.Data["json"] = respuesta
 
 	c.ServeJSON()
+}
+
+// Post ...
+// @Title Create
+// @Description create PostFormularioTipo
+// @Param	body		body 	models.PostFormularioTipo	true		"body for PostFormularioTipo content"
+// @Success 201 {object} models.PostFormularioTipo
+// @Failure 403 body is empty
+// @router / [post]
+func (c *Formulario_por_tipoController) PostFormularioTipo() {
+	defer errorhandler.HandlePanic(&c.Controller)
+
+	data := c.Ctx.Input.RequestBody
+
+	if data != nil {
+		respuesta := services.MetricasAutoevaluacion(data)
+		c.Ctx.Output.SetStatus(respuesta.Status)
+		c.Data["json"] = respuesta
+		c.ServeJSON()
+
+	} else {
+		c.Ctx.Output.SetStatus(400)
+		c.Data["json"] = requestresponse.APIResponseDTO(false, 400, nil, "Datos erroneos")
+		c.ServeJSON()
+	}
 }
